--- a/ruff.toml
+++ b/ruff.toml
@@ -24,7 +24,7 @@ select = [
     "UP014",  # convert-named-tuple-functional-to-class
     "UP015",  # redundant-open-modes
     "UP017",  # datetime-timezone-utc
-#   "UP018",  # native-literals
+    "UP018",  # native-literals
     "UP019",  # typing-text-str-alias
     "UP020",  # open-alias
     "UP021",  # replace-universal-newlines
