--- a/ruff.toml
+++ b/ruff.toml
@@ -39,7 +39,7 @@ select = [
 #   "UP031",  # printf-string-formatting
 #   "UP032",  # f-string
     "UP033",  # lru-cache-with-maxsize-none
-#   "UP034",  # extraneous-parentheses
+    "UP034",  # extraneous-parentheses
 #   "UP035",  # deprecated-import
     "UP036",  # outdated-version-block
     "UP037",  # quoted-annotation
