--- a/ruff.toml
+++ b/ruff.toml
@@ -49,7 +49,7 @@ select = [
     "UP042",  # replace-str-enum (preview)
     "UP043",  # unnecessary-default-type-args
     "UP044",  # non-pep646-unpack
-#   "UP045",  # non-pep604-annotation-optional
+    "UP045",  # non-pep604-annotation-optional
 #   "UP046",  # non-pep695-generic-class
     "UP047",  # non-pep695-generic-function
     "UP049",  # private-type-parameter
