--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -18,68 +18,18 @@ permissions:
   contents: read
 
 jobs:
-  flake8:
-    name: flake8
+  linters:
+    name: prek
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-        with:
-          persist-credentials: false
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.14'
-      - run: python -m pip install flake8
-      - name: flake8
-        # Pinned to v3.0.0.
-        uses: liskin/gh-problem-matcher-wrap@e7b7beaaafa52524748b31a381160759d68d61fb
-        with:
-          linters: flake8
-          run: flake8
 
-  isort:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
         with:
           persist-credentials: false
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.14'
-      - run: python -m pip install isort
-      - name: isort
-        # Pinned to v3.0.0.
-        uses: liskin/gh-problem-matcher-wrap@e7b7beaaafa52524748b31a381160759d68d61fb
-        with:
-          linters: isort
-          run: isort --check --diff django tests scripts
 
-  black:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
+      - name: Run linters
+        uses: j178/prek-action@91fd7d7cf70ae1dee9f4f44e7dfa5d1073fe6623 # v1.0.11
         with:
-          persist-credentials: false
-      - name: black
-        uses: psf/black@stable
-
-  zizmor:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-        with:
-          persist-credentials: false
-      - name: Run zizmor
-        uses: zizmorcore/zizmor-action@e673c3917a1aef3c65c972347ed84ccd013ecda4 # v0.2.0
-        with:
-          advanced-security: false
-          annotations: true
+          extra-args: "--skip blacken-docs --all-files"
