--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,6 +35,8 @@ jobs:
           python-version: '3.14'
           cache: 'pip'
           cache-dependency-path: 'docs/requirements.txt'
+      - name: Install system spell checker
+        run: sudo apt update && sudo apt install -y aspell aspell-en
       - run: python -m pip install -r docs/requirements.txt
       - name: Build docs
         run: |
