[5.2.x] Refs #35961 -- Restored AUTHORS in wheel.
As a side effect from adding explicit license files to conform to PEP 639, the
AUTHORS file got dropped from the wheel. The tarball still contained this file.

In the "Python Packaging User Guide"
(https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license-files)
the AUTHORS file is modeled to be included in license-files.

Follow-up to 96a7a652166bece8acc96d6335ebb8091de2f496.
Backport of 220db1c78a1bdeb3ccb91ba8bf0b7ab829379c35 from main.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ authors = [
 description = "A high-level Python web framework that encourages rapid development and clean, pragmatic design."
 readme = "README.rst"
 license = "BSD-3-Clause"
-license-files = ["LICENSE", "LICENSE.python"]
+license-files = ["LICENSE", "LICENSE.python", "AUTHORS"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Environment :: Web Environment",
