--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -20,8 +20,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgis-version: ["latest", "18-3.6-alpine", "17-master"]
+        include:
+          - postgis-version: "16-3.5-alpine"
+            package-manager: "apk"
+          - postgis-version: "17-master"
+            package-manager: "apt"
+          - postgis-version: "18-3.6-alpine"
+            package-manager: "apk"
     name: PostGIS ${{ matrix.postgis-version }}
+    container:
+      image: postgis/postgis:${{ matrix.postgis-version }}
     services:
       postgres:
         image: postgis/postgis:${{ matrix.postgis-version }}
@@ -42,29 +50,46 @@ jobs:
         uses: actions/checkout@v6
         with:
           persist-credentials: false
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.14'
-          cache: 'pip'
-          cache-dependency-path: 'tests/requirements/py3.txt'
-      - name: Update apt repo
-        run: sudo apt update
-      - name: Install libmemcached-dev for pylibmc
-        run: sudo apt install -y libmemcached-dev
-      - name: Install geospatial dependencies
-        run: sudo apt install -y binutils libproj-dev gdal-bin
-      - name: Print PostGIS versions
+      - name: Install system dependencies
+        run: |
+          if [ "${{ matrix.package-manager }}" = "apt" ]; then
+            apt update
+            apt install -y libmemcached-dev curl ca-certificates build-essential zlib1g-dev
+          else
+            apk add --no-cache libmemcached-dev build-base curl ca-certificates zlib-dev gdal-driver-all
+            # Create symlinks for GDAL and GEOS in Alpine
+            ln -sf /usr/lib/libgdal.so.36 /usr/lib/libgdal.so
+            ln -sf /usr/lib/libgeos_c.so.1 /usr/lib/libgeos_c.so
+          fi
+      - name: Install UV
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install Python
+        run: |
+          uv python install 3.14
+          uv venv --python 3.14
+      - name: Install dependencies
+        run: uv pip install --python 3.14 -r tests/requirements/py3.txt -r tests/requirements/postgres.txt -e .
+      - name: Print versions
         env:
           POSTGRES_DB: geodjango
           POSTGRES_USER: user
           POSTGRES_PASSWORD: postgres
         run: |
-          PGPASSWORD=$POSTGRES_PASSWORD psql -U $POSTGRES_USER -d $POSTGRES_DB -h localhost -c "SELECT PostGIS_full_version();"
-      - name: Install and upgrade packaging tools
-        run: python -m pip install --upgrade pip wheel
-      - run: python -m pip install -r tests/requirements/py3.txt -r tests/requirements/postgres.txt -e .
+          PGPASSWORD=$POSTGRES_PASSWORD psql -U $POSTGRES_USER -d $POSTGRES_DB -h postgres -c "SELECT PostGIS_full_version();"
+          uv run python -c "
+          from django.contrib.gis import gdal, geos
+          print(f'GDAL: {gdal.gdal_version()}')
+          print(f'GEOS: {geos.geos_version()}')
+          "
       - name: Create PostgreSQL settings file
         run: mv ./.github/workflows/data/test_postgis.py.tpl ./tests/test_postgis.py
+      - name: Create non-root user
+        run: |
+          if [ "${{ matrix.package-manager }}" = "apt" ]; then
+            useradd -m -u 1001 testuser
+          else
+            adduser -D -u 1001 testuser
+          fi
+          chown -R testuser:testuser $GITHUB_WORKSPACE
       - name: Run PostGIS tests
-        run: python -Wall tests/runtests.py -v2 --settings=test_postgis
+        run: su testuser -c 'uv run python -Wall tests/runtests.py -v2 --settings=test_postgis'
