--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -30,6 +30,10 @@ jobs:
           python-version: '3.14'
           cache: 'pip'
           cache-dependency-path: 'tests/requirements/py3.txt'
+      - name: Update apt repo
+        run: sudo apt update
+      - name: Install libmemcached-dev for pylibmc
+        run: sudo apt install -y libmemcached-dev
       - name: Install and upgrade packaging tools
         run: python -m pip install --upgrade pip wheel
       - run: python -m pip install -r tests/requirements/py3.txt -e .
