[5.2.x] Pinned black == 25.12.0 in GitHub actions, pre-commit and test requirements.

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           persist-credentials: false
       - name: black
-        uses: psf/black@stable
+        uses: psf/black@25.12.0
 
   zizmor:
     runs-on: ubuntu-latest
