--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ commands =
 [testenv:black]
 basepython = python3
 usedevelop = false
-deps = black
+deps = black == 25.12.0
 changedir = {toxinidir}
 commands = black --check --diff .
 
