--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build docs
         run: |
           cd docs
-          sphinx-build -b spelling -n -q -W -d _build/doctrees -D language=en_US -j auto . _build/spelling
+          SPHINXOPTS="-q -W" make spelling
 
   blacken-docs:
     runs-on: ubuntu-latest
@@ -56,16 +56,13 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: '3.14'
-      - run: python -m pip install blacken-docs
+          cache: 'pip'
+          cache-dependency-path: 'docs/requirements.txt'
+      - run: python -m pip install -r docs/requirements.txt
       - name: Build docs
         run: |
           cd docs
           make black
-          RESULT=`cat _build/black/output.txt`
-          if [ "$RESULT" -gt 0 ]; then
-              echo "💥 📢 Code blocks in documentation must be reformatted with blacken-docs 📢 💥"
-          fi;
-          exit $RESULT
 
   lint-docs:
     runs-on: ubuntu-latest
@@ -80,7 +77,9 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: '3.14'
-      - run: python -m pip install sphinx-lint
+          cache: 'pip'
+          cache-dependency-path: 'docs/requirements.txt'
+      - run: python -m pip install -r docs/requirements.txt
       - name: Build docs
         run: |
           cd docs
