--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,7 +22,7 @@ permissions:
 jobs:
   docs:
     runs-on: ubuntu-24.04
-    name: spelling
+    name: docs
     timeout-minutes: 60
     steps:
       - name: Checkout
@@ -38,49 +38,7 @@ jobs:
       - name: Install system spell checker
         run: sudo apt update && sudo apt install -y aspell aspell-en
       - run: python -m pip install -r docs/requirements.txt
-      - name: Build docs
+      - name: Check docs spelling, proper code format, and general lint
         run: |
           cd docs
-          SPHINXOPTS="-q -W" make spelling
-
-  blacken-docs:
-    runs-on: ubuntu-latest
-    name: blacken-docs
-    timeout-minutes: 60
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-        with:
-          persist-credentials: false
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.14'
-          cache: 'pip'
-          cache-dependency-path: 'docs/requirements.txt'
-      - run: python -m pip install -r docs/requirements.txt
-      - name: Build docs
-        run: |
-          cd docs
-          make black
-
-  lint-docs:
-    runs-on: ubuntu-latest
-    name: lint-docs
-    timeout-minutes: 60
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-        with:
-          persist-credentials: false
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.14'
-          cache: 'pip'
-          cache-dependency-path: 'docs/requirements.txt'
-      - run: python -m pip install -r docs/requirements.txt
-      - name: Build docs
-        run: |
-          cd docs
-          make lint
+          make check
